--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@n8tb1t/use-scroll-position": "^2.0.3",
@@ -14,6 +15,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-element-scroll-hook": "^1.1.0",
+    "react-glidejs": "^1.0.8",
     "react-scripts": "4.0.1",
     "react-typical": "^0.1.3",
     "web-vitals": "^0.2.4"
