--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^2.7.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
     "react-element-scroll-hook": "^1.1.0",
     "react-glidejs": "^1.0.8",
