--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-element-scroll-hook": "^1.1.0",
     "react-glidejs": "^1.0.8",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.13",
     "react-typical": "^0.1.3",
     "web-vitals": "^0.2.4"
   },
